--- a/RTC/SeedUpperBody/rtc.conf
+++ b/RTC/SeedUpperBody/rtc.conf
@@ -216,7 +216,7 @@ corba.args: -ORBgiopMaxMsgSize 4194304
 ## %M: The manager name.
 ## %p: PID of the manager.
 ##
-# naming.formats: %h.host/%n.rtc
+naming.formats: %n.rtc
 
 ##
 ## Auto update to Naming Server
